<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/transactionFragment"
        android:enabled="true"
        android:icon="@drawable/ic_list_24"
        android:title="@string/transaction"/>
    <item
        android:id="@+id/graphFragment"
        android:enabled="true"
        android:icon="@drawable/ic_bar_chart_24"
        android:title="@string/charts"/>
    <item
        android:id="@+id/goalFragment"
        android:enabled="true"
        android:icon="@drawable/ic_flag_24"
        android:title="@string/goal"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_user_24"
        android:title="@string/profile"/>

</menu>