<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:minWidth="260dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_rounded_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/popupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="26sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/oldPass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popupTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/oldPass"
        app:layout_constraintStart_toStartOf="@id/oldPass"
        app:layout_constraintEnd_toEndOf="@id/oldPass">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPassConfirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/newPass"
        app:layout_constraintStart_toStartOf="@id/newPass"
        app:layout_constraintEnd_toEndOf="@id/newPass">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/popupBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassConfirm"
        app:layout_constraintEnd_toStartOf="@id/popupOk"/>

    <Button
        android:id="@+id/popupOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="@+id/popupBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/popupBack"
        app:layout_constraintTop_toTopOf="@+id/popupBack" />

</androidx.constraintlayout.widget.ConstraintLayout>